--- a/SalesApp/SalesApp.csproj
+++ b/SalesApp/SalesApp.csproj
@@ -9,4 +9,8 @@
       <PackageReference Include="MySql.Data" Version="8.0.26" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\CLI\CLI.csproj" />
+    </ItemGroup>
+
 </Project>
